--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ jupyter_server_config.py
 client_secrets.json
 
 # Manage projects in lab separately
-workspace
+projects
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
